--- a/src/main/webapp/views/anonymous/setNew.xhtml
+++ b/src/main/webapp/views/anonymous/setNew.xhtml
@@ -37,7 +37,7 @@
 			<h:message for="password-iscrt" styleClass="message" />
 		</h:form>
 		<h:message id="generalMessage" styleClass="message" />
-		<h:link value="Back to Login" outcome="/view/anonymous/login" />
+		<h:button value="Back to Login" action="/view/anonymous/login" />
 	</h:body>
 
 </f:view>
