add EndDateValidator and fix CirculationDetailsBacking and other classes remove IDs add names add inject TokenManager in ResetPasswordBacking add votedByName to Vote.java remove faces msg when user not found.

--- a/src/main/webapp/views/anonymous/forgetPassword.xhtml
+++ b/src/main/webapp/views/anonymous/forgetPassword.xhtml
@@ -3,7 +3,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="jakarta.faces.facelets" xmlns:h="jakarta.faces.html">
+      xmlns:f="jakarta.faces.core" xmlns:ui="jakarta.faces.facelets" xmlns:h="jakarta.faces.html">
 <f:view>
     <h:head>
         <title>Forget Passsword</title>
@@ -16,8 +16,9 @@
             <div class="container">
 
                 <label for="email">Email:</label>
-                <h:inputText id="email" value="#{resetPasswordBacking.user.email}" rendered="true"
-                             requiredMessage="Bitte geben Sie Ihre E-Mail-Adresse ein."/>
+                <h:inputText id="email" value="#{resetPasswordBacking.user.email}" required="true"
+                             requiredMessage="Bitte geben Sie Ihre E-Mail-Adresse ein."
+                             validator="EmailAddressSyntaxValidator"/>
 
                 <h:commandButton value="Reset Password" action="#{resetPasswordBacking.sendResetPasswordEmail()}"
                                  class="btn btn-primary"/>
